# dotfiles

./: .bash_profile  .bashrc  .gitignore  .tmux.conf  .zshrc  .zshrc_mac  CHEAT_SHEET.md  README.md  gnome_extensions_settings.dconf  install.sh  install_mac.sh
.github/workflows/: nvdc.yml
kitty/: kitty.conf
nvdc/: Cargo.toml  README.md
nvdc/src/: config.rs  devcontainer.rs  docker.rs  main.rs  nvim.rs  prompt.rs
nvim/: init.lua  lazy-lock.json
nvim/lua/core/: keymaps.lua  options.lua
nvim/lua/plugins/: cmp.lua  colorscheme.lua  lsp.lua  obsidian.lua  telescope.lua  treesitter.lua  ui.lua
