[package]
name = "nvdc"
version = "0.1.0"
edition = "2021"
description = "Launch devcontainers with your local Neovim configuration mounted inside"
license = "MIT"
rust-version = "1.75"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
dialoguer = "0.11"
anyhow = "1"
regex-lite = "0.1"
